--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -41,8 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChargeControl.cs" />
+    <Compile Include="Display.cs" />
+    <Compile Include="door.cs" />
+    <Compile Include="Logfile.cs" />
+    <Compile Include="RFIDreader.cs" />
     <Compile Include="StationControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="USBcharger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
