--- a/Unittest/Ladeskab.Unit.test.csproj
+++ b/Unittest/Ladeskab.Unit.test.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="StationControlUnittest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestUsbChargerSimulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
