Klasser tilføjet og events påbegyndt. Jeg satser på at skrive den kode der får door og RFIDReader til at sende data videre i systemet. Jeg forbinder dem også til stationcontrol, så i skal mest bekymre jer om selve indholdet i metoderne.

--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -42,10 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChargeControl.cs" />
+    <Compile Include="CurrentEventArgs.cs" />
     <Compile Include="Display.cs" />
     <Compile Include="Door.cs" />
+    <Compile Include="DoorOpenEventArgs.cs" />
+    <Compile Include="IDoor.cs" />
+    <Compile Include="IRFIDReader.cs" />
     <Compile Include="IUsbCharger.cs" />
     <Compile Include="Logfile.cs" />
+    <Compile Include="RFIDDetectedEventArgs.cs" />
     <Compile Include="RFIDreader.cs" />
     <Compile Include="StationControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
