--- a/App/App.csproj
+++ b/App/App.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ladeskab\Ladeskab.csproj">
+      <Project>{f4e279b9-58bc-432e-97b8-83eda4ec6515}</Project>
+      <Name>Ladeskab</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
