--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -42,19 +42,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChargeControl.cs" />
-    <Compile Include="CurrentEventArgs.cs" />
+    <Compile Include="USBCharger\CurrentEventArgs.cs" />
     <Compile Include="Display.cs" />
-    <Compile Include="Door.cs" />
-    <Compile Include="DoorOpenEventArgs.cs" />
-    <Compile Include="IDoor.cs" />
-    <Compile Include="IRFIDReader.cs" />
-    <Compile Include="IUsbCharger.cs" />
+    <Compile Include="Door\Door.cs" />
+    <Compile Include="Door\DoorOpenEventArgs.cs" />
+    <Compile Include="Door\IDoor.cs" />
+    <Compile Include="RFID\IRFIDReader.cs" />
+    <Compile Include="USBCharger\IUsbCharger.cs" />
     <Compile Include="Logfile.cs" />
-    <Compile Include="RFIDDetectedEventArgs.cs" />
-    <Compile Include="RFIDreader.cs" />
+    <Compile Include="RFID\RFIDDetectedEventArgs.cs" />
+    <Compile Include="RFID\RFIDreader.cs" />
     <Compile Include="StationControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsbChargerSimulator.cs" />
+    <Compile Include="USBCharger\UsbChargerSimulator.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
