Har tilføjet et event til door. Har testet i consol appen og der kaldes de rigtige metoder, som de skal. Har fulgt dem igennem breakpoints og debugging. Door og RFID og CurrentEvent bliver alle sammen raised som de skal. Har sat dependency injection op. Test setup lavet i StationControlUnitTest.

--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChargeControl.cs" />
+    <Compile Include="Door\DoorClosedEventArgs.cs" />
     <Compile Include="USBCharger\CurrentEventArgs.cs" />
     <Compile Include="Display.cs" />
     <Compile Include="Door\Door.cs" />
@@ -51,7 +52,7 @@
     <Compile Include="USBCharger\IUsbCharger.cs" />
     <Compile Include="Logfile.cs" />
     <Compile Include="RFID\RFIDDetectedEventArgs.cs" />
-    <Compile Include="RFID\RFIDreader.cs" />
+    <Compile Include="RFID\RFIDReader.cs" />
     <Compile Include="StationControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="USBCharger\UsbChargerSimulator.cs" />
