--- a/Unittest/Ladeskab.Unit.test.csproj
+++ b/Unittest/Ladeskab.Unit.test.csproj
@@ -61,7 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DoorUnitTest.cs" />
-    <Compile Include="StationControlUnittest.cs" />
+    <Compile Include="RFIDReaderUnitTest.cs" />
+    <Compile Include="StationControlUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUsbChargerSimulator.cs" />
   </ItemGroup>
