--- a/Unittest/Ladeskab.Unit.test.csproj
+++ b/Unittest/Ladeskab.Unit.test.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChargeControlUnitTest\HandleNewCurrentValueUnitTest.cs" />
     <Compile Include="DoorUnitTest.cs" />
     <Compile Include="RFIDReaderUnitTest.cs" />
     <Compile Include="StationControlUnitTest.cs" />
@@ -76,6 +77,7 @@
       <Name>Ladeskab</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
