--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -57,25 +57,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChargeControl.cs" />
+    <Compile Include="ChargeControl\ChargeControl.cs" />
+    <Compile Include="ChargeControl\IChargeControl.cs" />
+    <Compile Include="Display\IDisplay.cs" />
     <Compile Include="Door\DoorClosedEventArgs.cs" />
+    <Compile Include="ILogfile\ILogfile.cs" />
+    <Compile Include="StationControl\IStationControl.cs" />
     <Compile Include="USBCharger\CurrentEventArgs.cs" />
-    <Compile Include="Display.cs" />
+    <Compile Include="Display\Display.cs" />
     <Compile Include="Door\Door.cs" />
     <Compile Include="Door\DoorOpenEventArgs.cs" />
     <Compile Include="Door\IDoor.cs" />
     <Compile Include="RFID\IRFIDReader.cs" />
     <Compile Include="USBCharger\IUsbCharger.cs" />
-    <Compile Include="Logfile.cs" />
+    <Compile Include="ILogfile\Logfile.cs" />
     <Compile Include="RFID\RFIDDetectedEventArgs.cs" />
     <Compile Include="RFID\RFIDReader.cs" />
-    <Compile Include="StationControl.cs" />
+    <Compile Include="StationControl\StationControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="USBCharger\UsbChargerSimulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
